refactor: update creatUser method in UserServiceImpl class

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hibernate?useSSL=false&allowPublicKeyRetrieval=true&maxReconnects=3&useLegacyDatetimeCode=false&serverTimezone=Africa/Lagos&jdbcCompliantTruncation=false
+    url: jdbc:mysql://localhost:3306/udemy?useSSL=false&allowPublicKeyRetrieval=true&maxReconnects=3&useLegacyDatetimeCode=false&serverTimezone=Africa/Lagos&jdbcCompliantTruncation=false
     username: root
     password: mayonnaise
