--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+server:
+  port: 9900
+  servlet:
+    context-path: /ws
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/udemy?useSSL=false&allowPublicKeyRetrieval=true&maxReconnects=3&useLegacyDatetimeCode=false&serverTimezone=Africa/Lagos&jdbcCompliantTruncation=false
