chore: add json validation to UserRequest Class fields

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,2 +1,3 @@
 invalid.field = must have valid format
-required.field = Must not be empty
+required.field = must not be empty
+notnull.field = must not be null
