fix: major bug fix

--- a/src/main/resources/message.properties
+++ b/src/main/resources/message.properties
@@ -1,3 +1,4 @@
 invalid.field = must have valid format
 required.field = must not be empty
 notnull.field = must not be null
+atleast-one.field = must have atleast one item
